force-app/main/default/objects/Statement__c/fields/Expense_Reports__c.field-meta.xml
<CustomField>
    <fullName>Expense_Reports__c</fullName>
    <label>Expense Reports</label>
    <summaryForeignKey>Expense_Report__c.Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>