force-app/main/default/objects/Statement__c/fields/In_Progress_Expense_Reports__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Expense_Reports__c</fullName>
    <label>In Progress Expense Reports</label>
    <summaryFilterItems>
        <field>Expense_Report__c.Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Expense_Report__c.Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>