force-app/main/default/objects/Statement__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Expense_Report__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_Report__c.Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>