force-app/main/default/objects/Statement__c/fields/Total_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Charges__c</fullName>
    <label>Total # of Charges</label>
    <summarizedField>Expense_Report__c.Charges__c</summarizedField>
    <summaryForeignKey>Expense_Report__c.Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>